Fix hover state in dark mode

--- a/public/style-3.css
+++ b/public/style-3.css
@@ -464,6 +464,10 @@ body.dark .navbar-sub div.info {
   color: white;
 }
 
+body.dark .examples > div .section-list ol li a:hover {
+  color: #187ABF;
+}
+
 body.dark .nav>li>a:focus, body.dark .nav>li>a:hover {
   background-color: #4e4e4e;
 }
